--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,7 +1,7 @@
 {
   "defaultAccounts": [
-    { "username": "admin" , "email": "admin@foo.com", "password": "changeme", "role": "admin" },
-    { "username": "john", "email": "john@foo.com", "password": "changeme" },
+    { "username": "admin" , "email": "admin@hawaii.edu", "password": "changeme", "role": "admin" },
+    { "username": "john", "email": "john@hawaii.edu", "password": "changeme" },
     { "username": "b", "email": "b@hawaii.edu", "password": "b" }
   ],
 
