--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -8,27 +8,27 @@
   "defaultProfiles": [
     {
       "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
-      "major":  "Physics", "year": 2022, "description" : "Hello!", "owner": "john@hawaii.edu"
+      "major":  "Physics", "year": 2022, "description" : "Hello!", "owner": "john0@hawaii.edu"
     },
     {
       "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
-      "major":  "Dance", "year": 2024, "description" : "Hello!", "owner": "john@hawaii.edu"
+      "major":  "Dance", "year": 2024, "description" : "Hello!", "owner": "john1@hawaii.edu"
     },
     {
       "firstName": "Phoebe", "lastName": "Frog", "image": "https://www.honoluluzoo.org/wp-content/uploads/IMG_3885.jpg",
-      "major":  "Math", "year": 2023, "description" : "Hello!", "owner": "john@hawaii.edu"
+      "major":  "Math", "year": 2023, "description" : "Hello!", "owner": "john2@hawaii.edu"
     },
     {
       "firstName": "Robert", "lastName": "Rabbit", "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6eozQB5HYCVjXml5SnCYIIxP5KDkKZ8HqPA&usqp=CAU",
-      "major":  "Computer Science", "year": 2025, "description" : "Hello!", "owner": "john@hawaii.edu"
+      "major":  "Computer Science", "year": 2025, "description" : "Hello!", "owner": "john3@hawaii.edu"
     },
     {
       "firstName": "Casey", "lastName": "Cassowary", "image": "https://blog.nature.org/science/files/2020/08/14318223382_c212e2c88c_k-e1598494581447.jpg",
-      "major":  "Classics", "year": 2022, "description" : "Hello!", "owner": "john@hawaii.edu"
+      "major":  "Classics", "year": 2022, "description" : "Hello!", "owner": "john4@hawaii.edu"
     },
     {
       "firstName": "Jerry", "lastName": "Jellyfish", "image": "https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg",
-      "major":  "Art History", "year": 2024, "description" : "Hello!", "owner": "john@hawaii.edu"
+      "major":  "Art History", "year": 2024, "description" : "Hello!", "owner": "john5@hawaii.edu"
     }
   ]
 }
