--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,34 +1,95 @@
 {
   "defaultAccounts": [
-    { "username": "admin" , "email": "admin@hawaii.edu", "password": "changeme", "role": "admin" },
-    { "username": "john", "email": "john@hawaii.edu", "password": "changeme" },
-    { "username": "b", "email": "b@hawaii.edu", "password": "b" }
+    { "username": "admin", "email": "admin@hawaii.edu", "password": "changeme", "role": "admin" },
+    { "username": "SillySparrow", "email": "ssparrow@hawaii.edu", "password": "changeme" },
+    { "username": "Thortle", "email": "tturtle@hawaii.edu", "password": "changeme" },
+    { "username": "PhroggyChair", "email": "pfrog@hawaii.edu", "password": "changeme" },
+    { "username": "Robbit", "email": "rrabbit@hawaii.edu", "password": "changeme" },
+    { "username": "Caseowary", "email": "ccassowary@hawaii.edu", "password": "changeme" },
+    { "username": "Jerryfish", "email": "jjellyfish@hawaii.edu", "password": "changeme" }
   ],
 
   "defaultProfiles": [
     {
       "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
-      "major":  "Physics", "year": 2022, "description" : "Hello!", "owner": "john0@hawaii.edu"
+      "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "ssparrow@hawaii.edu"
     },
     {
       "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
-      "major":  "Dance", "year": 2024, "description" : "Hello!", "owner": "john1@hawaii.edu"
+      "gender": "Male", "major":  "Dance", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "tturtle@hawaii.edu"
     },
     {
       "firstName": "Phoebe", "lastName": "Frog", "image": "https://www.honoluluzoo.org/wp-content/uploads/IMG_3885.jpg",
-      "major":  "Math", "year": 2023, "description" : "Hello!", "owner": "john2@hawaii.edu"
+      "gender": "Female", "major":  "Math", "year": 2023, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "pfrog@hawaii.edu"
     },
     {
       "firstName": "Robert", "lastName": "Rabbit", "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6eozQB5HYCVjXml5SnCYIIxP5KDkKZ8HqPA&usqp=CAU",
-      "major":  "Computer Science", "year": 2025, "description" : "Hello!", "owner": "john3@hawaii.edu"
+      "gender": "Male", "major":  "Computer Science", "year": 2025, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "rrabbit@hawaii.edu"
     },
     {
       "firstName": "Casey", "lastName": "Cassowary", "image": "https://blog.nature.org/science/files/2020/08/14318223382_c212e2c88c_k-e1598494581447.jpg",
-      "major":  "Classics", "year": 2022, "description" : "Hello!", "owner": "john4@hawaii.edu"
+      "gender": "Nonbinary", "major":  "Classics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "ccassowary@hawaii.edu"
     },
     {
       "firstName": "Jerry", "lastName": "Jellyfish", "image": "https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg",
-      "major":  "Art History", "year": 2024, "description" : "Hello!", "owner": "john5@hawaii.edu"
+      "gender": "Male", "major":  "Art History", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "jjellyfish@hawaii.edu"
+    }
+  ],
+
+  "defaultFilters": [
+    {
+      "rent": { "min": 0, "max": "Infinity" },
+      "location": [],
+      "gender": [],
+      "pets": { "whitelist": [], "blacklist": [] },
+      "year": { "min": 0, "max": "Infinity" },
+      "owner": "ssparrow@hawaii.edu"
+    },
+    {
+      "rent": { "min": 0, "max": "Infinity" },
+      "location": [],
+      "gender": [],
+      "pets": { "whitelist": [], "blacklist": [] },
+      "year": { "min": 0, "max": "Infinity" },
+      "owner": "tturtle@hawaii.edu"
+    },
+    {
+      "rent": { "min": 0, "max": "Infinity" },
+      "location": [],
+      "gender": [],
+      "pets": { "whitelist": [], "blacklist": [] },
+      "year": { "min": 0, "max": "Infinity" },
+      "owner": "pfrog@hawaii.edu"
+    },
+    {
+      "rent": { "min": 0, "max": "Infinity" },
+      "location": [],
+      "gender": [],
+      "pets": { "whitelist": [], "blacklist": [] },
+      "year": { "min": 0, "max": "Infinity" },
+      "owner": "rrabbit@hawaii.edu"
+    },
+    {
+      "rent": { "min": 0, "max": "Infinity" },
+      "location": [],
+      "gender": [],
+      "pets": { "whitelist": [], "blacklist": [] },
+      "year": { "min": 0, "max": "Infinity" },
+      "owner": "ccassowary@hawaii.edu"
+    },
+    {
+      "rent": { "min": 0, "max": "Infinity" },
+      "location": [],
+      "gender": [],
+      "pets": { "whitelist": [], "blacklist": [] },
+      "year": { "min": 0, "max": "Infinity" },
+      "owner": "jjellyfish@hawaii.edu"
     }
   ]
 }
