--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -11,41 +11,40 @@
 
   "defaultProfiles": [
     {
-      "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
+      "username": "SillySparrow", "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
       "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "ssparrow@hawaii.edu"
+      "rent": { "min": 0, "max": "Infinity" }, "owner": "ssparrow@hawaii.edu"
     },
     {
-      "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
+      "username": "Thortle", "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
       "gender": "Male", "major":  "Dance", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "tturtle@hawaii.edu"
+      "rent": { "min": 0, "max": "Infinity" }, "owner": "tturtle@hawaii.edu"
     },
     {
-      "firstName": "Phoebe", "lastName": "Frog", "image": "https://www.honoluluzoo.org/wp-content/uploads/IMG_3885.jpg",
+      "username": "PhroggyChair", "firstName": "Phoebe", "lastName": "Frog", "image": "https://www.honoluluzoo.org/wp-content/uploads/IMG_3885.jpg",
       "gender": "Female", "major":  "Math", "year": 2023, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "pfrog@hawaii.edu"
+      "rent": { "min": 0, "max": "Infinity" }, "owner": "pfrog@hawaii.edu"
     },
     {
-      "firstName": "Robert", "lastName": "Rabbit", "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6eozQB5HYCVjXml5SnCYIIxP5KDkKZ8HqPA&usqp=CAU",
+      "username": "Robbit", "firstName": "Robert", "lastName": "Rabbit", "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6eozQB5HYCVjXml5SnCYIIxP5KDkKZ8HqPA&usqp=CAU",
       "gender": "Male", "major":  "Computer Science", "year": 2025, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "rrabbit@hawaii.edu"
+      "rent": { "min": 0, "max": "Infinity" }, "owner": "rrabbit@hawaii.edu"
     },
     {
-      "firstName": "Casey", "lastName": "Cassowary", "image": "https://blog.nature.org/science/files/2020/08/14318223382_c212e2c88c_k-e1598494581447.jpg",
+      "username": "Caseowary", "firstName": "Casey", "lastName": "Cassowary", "image": "https://blog.nature.org/science/files/2020/08/14318223382_c212e2c88c_k-e1598494581447.jpg",
       "gender": "Nonbinary", "major":  "Classics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "ccassowary@hawaii.edu"
+      "rent": { "min": 0, "max": "Infinity" }, "owner": "ccassowary@hawaii.edu"
     },
     {
-      "firstName": "Jerry", "lastName": "Jellyfish", "image": "https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg",
+      "username": "Jerryfish", "firstName": "Jerry", "lastName": "Jellyfish", "image": "https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg",
       "gender": "Male", "major":  "Art History", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "jjellyfish@hawaii.edu"
+      "rent": { "min": 0, "max": "Infinity" }, "owner": "jjellyfish@hawaii.edu"
     }
   ],
 
   "defaultFilters": [
     {
       "rent": { "min": 0, "max": "Infinity" },
-      "location": [],
       "gender": [],
       "pets": { "whitelist": [], "blacklist": [] },
       "year": { "min": 0, "max": "Infinity" },
@@ -53,7 +52,6 @@
     },
     {
       "rent": { "min": 0, "max": "Infinity" },
-      "location": [],
       "gender": [],
       "pets": { "whitelist": [], "blacklist": [] },
       "year": { "min": 0, "max": "Infinity" },
@@ -61,7 +59,6 @@
     },
     {
       "rent": { "min": 0, "max": "Infinity" },
-      "location": [],
       "gender": [],
       "pets": { "whitelist": [], "blacklist": [] },
       "year": { "min": 0, "max": "Infinity" },
@@ -69,7 +66,6 @@
     },
     {
       "rent": { "min": 0, "max": "Infinity" },
-      "location": [],
       "gender": [],
       "pets": { "whitelist": [], "blacklist": [] },
       "year": { "min": 0, "max": "Infinity" },
@@ -77,7 +73,6 @@
     },
     {
       "rent": { "min": 0, "max": "Infinity" },
-      "location": [],
       "gender": [],
       "pets": { "whitelist": [], "blacklist": [] },
       "year": { "min": 0, "max": "Infinity" },
@@ -85,7 +80,6 @@
     },
     {
       "rent": { "min": 0, "max": "Infinity" },
-      "location": [],
       "gender": [],
       "pets": { "whitelist": [], "blacklist": [] },
       "year": { "min": 0, "max": "Infinity" },
