--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -12,33 +12,33 @@
   "defaultProfiles": [
     {
       "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
-      "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": ["dog", "cat"], "blacklist": ["snake", "rat"] },
-      "location": ["waipahu"], "rent": { "min": 1200, "max": 3400 }, "owner": "ssparrow@hawaii.edu"
+      "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "ssparrow@hawaii.edu"
     },
     {
       "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
-      "gender": "Male", "major":  "Dance", "year": 2024, "description" : "Hello!", "pets": { "whitelist": ["eagle", "cow"], "blacklist": ["bee", "wasp"] },
-      "location": ["hawaii kai", "ewa beach"], "rent": { "min": 2340, "max": 5000 }, "owner": "tturtle@hawaii.edu"
+      "gender": "Male", "major":  "Dance", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "tturtle@hawaii.edu"
     },
     {
       "firstName": "Phoebe", "lastName": "Frog", "image": "https://www.honoluluzoo.org/wp-content/uploads/IMG_3885.jpg",
-      "gender": "Female", "major":  "Math", "year": 2023, "description" : "Hello!", "pets": { "whitelist": ["penguin", "snorlax"], "blacklist": ["chicken", "duck"] },
-      "location": ["ewa beach"], "rent": { "min": 1000, "max": 2300 }, "owner": "pfrog@hawaii.edu"
+      "gender": "Female", "major":  "Math", "year": 2023, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "pfrog@hawaii.edu"
     },
     {
       "firstName": "Robert", "lastName": "Rabbit", "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6eozQB5HYCVjXml5SnCYIIxP5KDkKZ8HqPA&usqp=CAU",
-      "gender": "Male", "major":  "Computer Science", "year": 2025, "description" : "Hello!", "pets": { "whitelist": ["dog", "mouse"], "blacklist": ["cat", "geico"] },
-      "location": ["waipahu"], "rent": { "min": 2130, "max": 2900 }, "owner": "rrabbit@hawaii.edu"
+      "gender": "Male", "major":  "Computer Science", "year": 2025, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "rrabbit@hawaii.edu"
     },
     {
       "firstName": "Casey", "lastName": "Cassowary", "image": "https://blog.nature.org/science/files/2020/08/14318223382_c212e2c88c_k-e1598494581447.jpg",
-      "gender": "Nonbinary", "major":  "Classics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": ["dog", "cat"], "blacklist": ["kangaroo", "beetle"] },
-      "location": ["kalihi"], "rent": { "min": 1110, "max": 2022 }, "owner": "ccassowary@hawaii.edu"
+      "gender": "Nonbinary", "major":  "Classics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "ccassowary@hawaii.edu"
     },
     {
       "firstName": "Jerry", "lastName": "Jellyfish", "image": "https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg",
-      "gender": "Male", "major":  "Art History", "year": 2024, "description" : "Hello!", "pets": { "whitelist": ["roach", "cat"], "blacklist": ["snake", "chicken"] },
-      "location": ["kalihi", "waipahu"], "rent": { "min": 1000, "max": 2500 }, "owner": "jjellyfish@hawaii.edu"
+      "gender": "Male", "major":  "Art History", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
+      "location": [], "rent": { "min": 0, "max": "Infinity" }, "owner": "jjellyfish@hawaii.edu"
     }
   ],
 
