--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -12,8 +12,8 @@
   "defaultProfiles": [
     {
       "username": "SillySparrow", "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
-      "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "rent": { "min": 0, "max": "Infinity" }, "owner": "ssparrow@hawaii.edu"
+      "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": ["Cat"], "blacklist": ["Snake"] },
+      "rent": { "min": 22, "max": 2600 }, "owner": "ssparrow@hawaii.edu"
     },
     {
       "username": "Thortle", "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
