--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci-roommate-radar
 on:
   push:
     branches:
-      - master
+      - main
 
 defaults:
   run:
@@ -33,6 +33,7 @@ jobs:
 
       - run: npm install -g meteor
 
+      - uses: meteorengineer/setup-meteor@v1
       - name: Run Meteor commands
         shell: bash -l {0}
         run: |
