--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "core-js": "^3.18.0",
     "graphql": "^14.5.8",
     "meteor-node-stubs": "^1.1.0",
+    "nodemailer": "^6.7.2",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
