Got reset Password to work
* Clicking on reset password should send an link to designated email
* I had to switch to gmail instead of edu because linking requires permission from ICS department (Branden)
* Made a dummy gmail account if anyone want to try it out. its on the development.json
* It could also work with you own personal gmail account you just need to turn on less secure app https://support.google.com/accounts/answer/6010255 and in gmail/see all settings/Forwarding and POP/IMAP enable IMAP access (this would make account less secure)

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,7 +1,7 @@
 {
   "defaultAccounts": [
     { "username": "admin", "email": "admin@gmail.com", "password": "changeme", "role": "admin" },
-    { "username": "SillySparrow", "email": "ineedtest624@gmail.com", "password": "abc123xyz" },
+    { "username": "SillySparrow", "email": "ssparrow@gmail.com", "password": "abc123xyz" },
     { "username": "Thortle", "email": "tturtle@gmail.com", "password": "changeme" },
     { "username": "PhroggyChair", "email": "pfrog@gmail.com", "password": "changeme" },
     { "username": "Robbit", "email": "rrabbit@gmail.com", "password": "changeme" },
@@ -87,8 +87,8 @@
     }
   ],
   "emails": {
-    "service": "Gmail",
-    "user": "ineedtest624@gmail.com",
-    "password": "abc123xyz"
+  "service": "Gmail",
+  "user": "ineedtest624@gmail.com",
+  "password": "abc123xyz"
   }
 }
