--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -13,32 +13,32 @@
     {
       "firstName": "Sally", "lastName": "Sparrow", "image": "https://www.allaboutbirds.org/guide/assets/photo/305874101-480px.jpg",
       "gender": "Female", "major":  "Physics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": ["Cat"], "blacklist": ["Dog"] },
-      "rent": { "min": 1000, "max": 3000 }, "socialMedia":  { "instagram": "SillySparrow808", "snapchat": "", "discord": "" }, "owner": "SillySparrow"
+      "rent": { "min": 1000, "max": 3000 }, "socialMedia":  { "instagram": "SillySparrow808", "snapchat": "" }, "owner": "SillySparrow"
     },
     {
       "firstName": "Thomas", "lastName": "Turtle", "image": "https://www.ucf.edu/news/files/2021/02/juvenile_green_sea_turtle_for_web.jpg",
       "gender": "Male", "major":  "Dance", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "Thortle", "snapchat": "Thortle", "discord": "Thortle#1234" }, "owner": "Thortle"
+      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "Thortle", "snapchat": "Thortle" }, "owner": "Thortle"
     },
     {
       "firstName": "Phoebe", "lastName": "Frog", "image": "https://www.honoluluzoo.org/wp-content/uploads/IMG_3885.jpg",
       "gender": "Female", "major":  "Math", "year": 2023, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "PhroggyChair", "snapchat": "PhroggyChair", "discord": "" }, "owner": "PhroggyChair"
+      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "PhroggyChair", "snapchat": "PhroggyChair" }, "owner": "PhroggyChair"
     },
     {
       "firstName": "Robert", "lastName": "Rabbit", "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6eozQB5HYCVjXml5SnCYIIxP5KDkKZ8HqPA&usqp=CAU",
       "gender": "Male", "major":  "Computer Science", "year": 2025, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "Robbit808", "snapchat": "Robbit", "discord": "Robbit#8090" }, "owner": "Robbit"
+      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "Robbit808", "snapchat": "Robbit" }, "owner": "Robbit"
     },
     {
       "firstName": "Casey", "lastName": "Cassowary", "image": "https://blog.nature.org/science/files/2020/08/14318223382_c212e2c88c_k-e1598494581447.jpg",
       "gender": "Nonbinary", "major":  "Classics", "year": 2022, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "", "snapchat": "Caseowary", "discord": "Caseowary#2234" }, "owner": "Caseowary"
+      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "", "snapchat": "Caseowary" }, "owner": "Caseowary"
     },
     {
       "firstName": "Jerry", "lastName": "Jellyfish", "image": "https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg",
       "gender": "Male", "major":  "Art History", "year": 2024, "description" : "Hello!", "pets": { "whitelist": [], "blacklist": [] },
-      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "Jerryfishlover", "snapchat": "", "discord": "Jerryfish#5543" }, "owner": "Jerryfish"
+      "rent": { "min": 0, "max": "Infinity" }, "socialMedia":  { "instagram": "Jerryfishlover", "snapchat": "" }, "owner": "Jerryfish"
     }
   ],
 
