Fixed Password reset

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -249,7 +249,7 @@
   ],
   "emails": {
   "service": "Gmail",
-  "user": "your-edu-email",
-  "password": "your-edu-password"
+  "user": "ineedtest642@gmail.com",
+  "password": "abc123xyz"
   }
 }
